# RayTracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main
include/: ambient_light.h  args.hpp  camera.h  color.h  directional_light.h  hittable.h  hittable_list.h  interval.h  light.h  light_list.h  material.h  point_light.h  ray.h  render.h  sphere.h  vec3.h
include/rt/: utilities.hpp
include/rt/geom/: aabb.hpp  aabb_tree_node.hpp  bvh.hpp  heightmap.hpp  hittable.hpp  hittable_list.hpp  sphere.hpp  triangle.hpp
include/rt/lighting/: ambient_light.hpp  directional_light.hpp  light.hpp  light_list.hpp  point_light.hpp
include/rt/math/: interval.hpp  ray.hpp  vec3.hpp
include/rt/math/noise/: noise.hpp
include/rt/render/: camera.hpp  render.hpp
include/rt/scene/: material.hpp
include/terrain/noise/: noise.hpp  opensimplex2s.hpp
src/: main.cpp
src/rt/: utilities.cpp
src/rt/geom/: aabb.cpp  heightmap.cpp  hittable.cpp  hittable_list.cpp  sphere.cpp  triangle.cpp
src/rt/lighting/: ambient_light.cpp  directional_light.cpp  light_list.cpp  point_light.cpp
src/rt/math/: vec3.cpp
src/rt/render/: render.cpp
src/rt/scene/: material.cpp
src/terrain/noise/: opensimplex2s.cpp
